adding and showing list of games

--- a/final/steam/templates/base.html
+++ b/final/steam/templates/base.html
@@ -7,7 +7,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-<img src="{% static 'steam.png' %}" alt="logo"/>
+<img src="{% static 'steam.png' %}"/>
 
 {% block content%}
 {% endblock %}
