--- a/final/steam/templates/register.html
+++ b/final/steam/templates/register.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Logowanie{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content%}
 <form action="{% url 'register' %}" method="POST">
