--- a/final/steam/templates/game.html
+++ b/final/steam/templates/game.html
@@ -2,10 +2,19 @@
 {% block title %}Game details{% endblock %}
 
 {% block content%}
+<br>
+<h2><a href="{% url 'main' %}">BACK</a></h2>
 <h2>Game:</h2>
-<p><strong>Name: </strong>{{ game.name }}</p>
-{#<p><strong>Nazwisko: </strong>{{ student.last_name }}</p>#}
-{#<p><strong>Klasa: </strong>{{ student.get_school_class_display }}</p>#}
-{#<p><strong>Rok urodzenia: </strong>{{ student.year_of_birth|default:"Nie podano" }}</p>#}
-
+    <p><strong>Name:</strong></p>
+    <p>{{ game.name }}</p>
+    <p><strong>Developer:</strong></p>
+    <ul>
+        {% for developer in developers %}
+            <li>{{ developer }}</li>
+        {% endfor %}
+    </ul>
+    <p><strong>Publisher: </strong></p>
+    <p>{{ publisher }}</p>
+    <p><strong>Players online:</strong></p>
+    <p>{{ players }}</p>
 {% endblock %}
