--- a/final/steam/templates/base.html
+++ b/final/steam/templates/base.html
@@ -7,10 +7,12 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-<img src="{% static 'steam.png' %}"/>
+<center>
+<img src="{% static 'python.png' %}" alt="logo"/>
 
 {% block content%}
 {% endblock %}
 
+</center>
 </body>
 </html>
