--- a/final/steam/templates/game_add.html
+++ b/final/steam/templates/game_add.html
@@ -6,7 +6,7 @@
     {% csrf_token %}
     <table>
     {{ form }}
-    </table>
+    </table><br>
     <input type="submit" value="Add new game"/>
 </form>
 
